--- a/korisna-package/HTML/shop.html
+++ b/korisna-package/HTML/shop.html
@@ -202,30 +202,32 @@
                                 <div class="row">
                                     <div class="col-xl-4 col-lg-4 col-md-6">
                                         <div class="single-products-item page-margin-desktop">
-                                            <div class="product-bg-wrap" style="background-image: url(./assets/img/shop-three-300x300.jpg);">
-                                                <div class="product-bg-hover">
-                                                    <ul>
-                                                        <li><a class="popup-image" href="./assets/img/shop-three-300x300.jpg"><i class="fa fa-search"></i></a></li>
-                                                        <li><a href="#" ><i class="fas fa-shopping-cart"></i></a></li>
-                                                        <li><a href="#" ><i class="fas fa-heart"></i></a></li>
-                                                    </ul>
+                                            <div class="product-bg-wrap">
+                                                <div class="single-protective-measure-item-2 page-mar-30">
+                                                    <div class="protective-measure-icon-wrap">
+                                                        <div class="protective-icon">
+                                                            <img src="assets/img/protection-1.png" alt="">
+                                                        </div>
+                                                    </div>
+                                                    <h4 class="protective-title">병원 정보</h4>
+                                                    <p class="common-short-text">Nostrud exercitation ullamco laboris
+                                                        aliquip ex commodo consequat duis aute
+                                                        irure dolor in reprehenderit in voluptate.
+                                                    asfsdfsdafsdaf
+                                                    asfsdfsdafsdaffasdfsad
+                                                    fsad
+                                                    safsad
+                                                    fsadf
+                                                    sdafsad
+                                                    fsdafsdf
+                                                    </p>
                                                 </div>
                                             </div>
-                                            <div class="product-info-wrap">
-                                                <h4><a href="#" >Face Cover Mask</a></h4>
-                                                <div class="review-star">
-                                                    <i class="fas fa-star"></i>
-                                                    <i class="fas fa-star"></i>
-                                                    <i class="fas fa-star"></i>
-                                                    <i class="fas fa-star"></i>
-                                                    <i class="fas fa-star"></i>
-                                                </div>
-                                                <div class="product-price-text">
-                                                    <span>$90,00</span>
-                                                </div>
-                                                <div class="cart-bottom">
-                                                    <a href="#" class="common-btn btn common-hover-3">Add To Cart</a>
-                                                </div>
+                                           
+                                        </div>
+                                        <div class="product-info-wrap">
+                                            <div class="cart-bottom">
+                                                <a href="#" class="common-btn btn common-hover-3">Add To Cart</a>
                                             </div>
                                         </div>
                                     </div>
